overlays/development/patches/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dify-http-route
spec:
  parentRefs:
    - name: istio
      namespace: kube-system
      kind: Gateway
  hostnames:
    - "dev.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /console/api
        - path:
            type: PathPrefix
            value: /v1
        - path:
            type: PathPrefix
            value: /files
        - path:
            type: PathPrefix
            value: /explore
        - path:
            type: PathPrefix
            value: /socket.io
        - path:
            type: PathPrefix
            value: /e
        - path:
            type: PathPrefix
            value: /mcp
        - path:
            type: PathPrefix
            value: /triggers
      backendRefs:
        - name: dify-nginx
          port: 80
